feat: add api for manage s3 storage
